--- a/css/defaultvalues.css
+++ b/css/defaultvalues.css
@@ -52,10 +52,9 @@
     to {
         top: 100vh;
     }
-}
-
+}  
 
 body {
-    background-color: black;
+    background: black;
     overflow: hidden;
 }
