--- a/css/defaultvalues.css
+++ b/css/defaultvalues.css
@@ -5,6 +5,7 @@
     src: url(https://fonts.gstatic.com/s/pressstart2p/v15/e3t4euO8T-267oIAQAu6jDQyK3nYivN04w.woff2) format('woff2');
     unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
+
 /* cyrillic */
 @font-face {
     font-family: 'Press Start 2P';
@@ -13,6 +14,7 @@
     src: url(https://fonts.gstatic.com/s/pressstart2p/v15/e3t4euO8T-267oIAQAu6jDQyK3nRivN04w.woff2) format('woff2');
     unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
+
 /* greek */
 @font-face {
     font-family: 'Press Start 2P';
@@ -21,6 +23,7 @@
     src: url(https://fonts.gstatic.com/s/pressstart2p/v15/e3t4euO8T-267oIAQAu6jDQyK3nWivN04w.woff2) format('woff2');
     unicode-range: U+0370-0377, U+037A-037F, U+0384-038A, U+038C, U+038E-03A1, U+03A3-03FF;
 }
+
 /* latin-ext */
 @font-face {
     font-family: 'Press Start 2P';
@@ -29,6 +32,7 @@
     src: url(https://fonts.gstatic.com/s/pressstart2p/v15/e3t4euO8T-267oIAQAu6jDQyK3nbivN04w.woff2) format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
     font-family: 'Press Start 2P';
@@ -45,16 +49,21 @@
     height: 5px;
     background-color: white;
     animation: fall linear forwards;
-    z-index:-1;
+    z-index: -1;
 }
 
 @keyframes fall {
     to {
         top: 100vh;
     }
-}  
+}
+
+* {
+    font-family: 'Press Start 2P', ariel, normal !important;
+}
 
 body {
     background: black;
     overflow: hidden;
+    margin: 0;
 }
