--- a/css/defaultvalues.css
+++ b/css/defaultvalues.css
@@ -63,13 +63,17 @@
 }
 
 body {
-    background: rgb(0, 0, 0);
+    background-image: url('../content/starsBG.png');
 
-
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 body,
 html {
+    overflow-y: hidden;
     margin: 0 !important;
     min-height: 100vh;
 }
