--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 #navbar {
     height: 80px;
     display: flex;
-    width: 80vw;
+    width: 90vw;
     max-width: 1800px;
     /* gap: 600px; */
     justify-content: space-between;
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    gap: 20px;
+    gap: 30px;
     top: 0;
     right: 0;
     height: 80vh;
@@ -33,7 +33,7 @@
     top: 1vh;
     right: 1vh;
     flex: 1;
-    z-index: 999;
+    z-index: 100 !important;
 }
 
 #closeIcon {
@@ -201,13 +201,16 @@
 }
 
 .lang-change {
-    align-content: center;
-    height: 100%;
-    display: flex;
     align-self: center;
-    gap: 6px;
-    align-items: center;
-    margin-left: 10%;
+    margin-left: 6%;
+}
+
+.sb-lang-change {
+    margin: auto 0 2%;
+}
+
+.lang-change:hover {
+    cursor: pointer;
 }
 
 .lang-change>img {
@@ -243,6 +246,11 @@
     height: 50%;
 }
 
+#sidebar>.pc-container {
+    min-width: 260px;
+    height: 40px;
+}
+
 .pc-container:hover {
     background-color: rgba(44, 193, 213, 0.7);
 
@@ -257,7 +265,7 @@
     width: auto;
 }
 
-#pc-name {
+.pc-name {
     margin: 0 6px;
 }
 
@@ -279,15 +287,25 @@
 }
 
 #mLogin-btn {
-    background-color: rgba(0, 136, 255, 0.687);
+    background-color: rgba(0, 117, 219, 0.687);
     border: none;
     height: 60%;
     align-self: center;
     border-radius: 2px;
 }
 
+#mLogin-sbtn {
+    background-color: rgba(0, 117, 219, 0.687);
+    border: none;
+    align-self: center;
+}
+
 #mLogin-btn:hover {
     background-color: rgba(0, 136, 255, 0.487);
+}
+
+.bg-blur {
+    z-index: 999 !important;
 }
 
 @media only screen and (min-width: 1201px) {
