--- a/loginForm/login.css
+++ b/loginForm/login.css
@@ -2,15 +2,26 @@
             outline: 1px solid red;
         } */
 
-        html,
-        body {
-            min-height: 100vh;
 
+        .bg-blur {
+            position: fixed;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background-color: rgba(22, 22, 22, 0.86);
+
+            z-index: 10;
         }
 
-        body {
-            background-color: rgb(47, 47, 47);
-            margin: none !important;
+        .login-box-wrapper {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            filter: drop-shadow(0px 0px 10px white);
+            z-index: 15;
         }
 
         .login-box {
@@ -23,9 +34,9 @@
             justify-content: center;
             align-items: center;
             gap: 2%;
-            max-width: 500px;
+            max-width: 420px;
             max-height: 900px;
-            min-width: 360px;
+            min-width: 300px;
             min-height: 540px;
             white-space: nowrap;
             text-overflow: ellipsis;
