--- a/css/main.css
+++ b/css/main.css
@@ -188,22 +188,66 @@
 
 /* new */
 #earth-container {
-    background-color: rgba(245, 222, 179, 0.501);
-    width: 100vw;
-    margin: auto 0;
+    width: clamp(300px, 70vw, 640px);
+    /* position: absolute; */
+    /* top: 50%;
+    left: 50%;
+    transform: translate(-50%, -40%); */
+    margin: 15vh auto 0;
+    position: relative;
 }
 
-#earth {
-    display: block;
-    width: 30%;
-    height: 30%;
-    margin: 10vh auto;
+#earth-img {
+    width: 100%;
+    height: auto;
+    z-index: 999;
 }
+
+#earth-img:hover {
+    cursor: pointer;
+}
+
+#sign-container {
+    width: 8%;
+    min-width: 120px;
+    position: absolute;
+    top: 0;
+    left: 15%;
+    transform: translateY(-50%) rotate(-26deg);
+}
+
+@media only screen and (max-width: 600px) {
+    #sign-container {
+        left: 30%;
+        transform: rotate(0) translateY(-86%);
+    }
+}
+
+#sign-img {
+    position: relative;
+    width: 100%;
+    height: auto;
+    bottom: 0;
+}
+
+.online-txt {
+    width: 100%;
+    padding: 1% 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 0;
+}
+
 
 .lang-change {
     align-self: center;
     margin-left: 6%;
+    user-select: none;
 }
+
+
 
 .sb-lang-change {
     margin: auto 0 2%;
@@ -318,6 +362,10 @@
 @media only screen and (max-width: 1200px) {
     .hideOnMobile {
         display: none !important;
+    }
+
+    #earth-container {
+        margin: 36vh auto;
     }
 }
 
